# convertor-athena

./: .gitignore  ATHENA_INTEGRATION.md  CHANGELOG.md  LUMIELLE_UPGRADE.md  README.md  SECURITY.md  TEST_CHECKLIST.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  run-app.sh  start-app.command  start-app.sh  start-dev.command  start-electron-dev.command  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/components/: ApprovalDialog.tsx  AssistantChat.tsx  AthenaCopilot.tsx  CollaborationComponents.tsx  CommandPalette.tsx  DevicePanel.tsx  FeedbackComponents.tsx  LanguageSelector.tsx  MemoPanel.tsx  NavigationSidebar.tsx  PWAComponents.tsx  ProjectManager.tsx  ScreenshotViewer.tsx  SessionList.tsx  SystemDashboard.tsx  TerminalOutput.tsx  ThemeToggle.tsx  ToastContainer.tsx  ToolResultPanel.tsx
app/contexts/: I18nContext.tsx  PWAContext.tsx  ThemeContext.tsx
app/hooks/: useAuthUser.ts  useExport.ts  useRecording.ts  useToast.ts  useUserContent.ts
app/locales/: en.json  ja.json  ko.json
app/offline/: page.tsx
app/types/: index.ts
app/utils/: api.ts
athena-ai/: index.js  package.json  telegram-main.js
athena-ai/channels/: channelInterface.js  channelRouter.js  discordChannel.js  telegramChannel.js
athena-ai/core/: orchestrator.js  promptBuilder.js  scheduler.js  strategyAnalyzer.js  subAgentManager.js  telegramBridge.js
athena-data/: athena.db  athena.db-shm  athena.db-wal
electron/: ICON_README.txt  main.js
public/: manifest.json  sw.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+84 files in other folders)
